--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "get-links-cli",
   "description": "get links via dom selector (cli version)",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "author": "Maik Ellerbrock <opensource@frapsoft.com> (https://github.com/ellerbrock)",
-  "main": "dist/get-links-cli.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "repository": {
     "url": "git@github.com:ellerbrock/get-links-cli.git",
@@ -15,15 +15,15 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production babel src -d dist",
-    "start": "babel-node src/get-links-cli",
+    "start": "nodemon src --exec babel-node",
     "test": "eslint src"
   },
   "files": [
-    "dist/get-links-cli.js"
+    "dist"
   ],
   "preferGlobal": "true",
   "bin": {
-    "get-links": "dist/get-links-cli.js"
+    "get-links": "dist/index.js"
   },
   "babel": {
     "presets": [
